# medical_prescription_chatbot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/: vision_client.py
db/: chat.py  connection.py  prescriptions.py
frontend/pages/: page_schedule.py
scheduler/: pdf_export.py  readiness.py
services/: conversation_restore.py  extraction_service.py  image_validation.py  utils.py
